# web3NewProperty

./: AgnoAgent.py  AgnoAgentPipeline.py  AgnoAttackAgent.py  AgnoTeatCase.py  README.md  foundry.toml  package-lock.json  pyproject.toml  pytest.ini  wallet.py  写一些测试文件.py
.github/workflows/: test.yml
.wsl_venv/: pyvenv.cfg
AgnoAi/: Attack_Agent_Prompt.txt  agnoProject.md  analyzer_prompt.txt  attack.md
FFiTest/: FFipython.py  get_dex_fee.py
contract/: MyToken.sol
fronted/: FrontSummary.md  simpleFront.html
reports/: attack_logic.txt
script/: Deploy.s.sol
scripts/: compileContract.py  deployContract.py  scanLink.py
src/: MyTokens.sol  Vault.sol
test/: InvariantVault.t.sol  InvariantVaultCompliance.t.sol  MyToken.t.sol  testVault.t.sol
test/AtkContract/: AttackExploit.t.sol  AttackTemplate.sol  AttackTemplate.t.sol  AttackTemplate2.sol
test/TestCase/: attackSummary.txt  system_test_plan.json
test/handlers/: FFiHandler.sol  FFisummary.md  VaultHandler.sol
tests/: conftest.py  handle_unknow_error.py  test_mint.py  test_parma.py  test_token.py  test_white_to_mint.py
web3_playwright/: open_browser.py  play_wright.md  run_flow.py
web3_playwright/chrome_profile/: Local State
web3_playwright/metamask/: background-0.js  background-1.js  background-10.js  background-11.js  background-12.js  background-13.js  background-2.js  background-3.js  background-4.js  background-5.js  background-6.js  background-7.js  background-8.js  background-9.js  common-0.js  common-1.js  common-10.js  common-11.js  common-12.js  common-13.js  common-14.js  common-15.js  common-16.js  common-17.js  (+47 more)
(+335 files in other folders)
