[project]
name = "projectnewenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai-slim[sentence-transformers]>=1.83.0",
    "pydantic-ai[ui]",       # Agent 框架
    "modelscope",        # 国内模型下载与调用
    "python-dotenv",     # 环境变量管理
    "logfire",           # Agent 执行过程可视化
    "ipykernel>=7.2.0",  #jupyter依赖
    "dataclasses>=0.8",  #让大模型有记忆功能
    "dashscope>=1.25.17", #阿里大模型
    "ipywidgets>=8.1.8", #适配jupyter notebook的库
    "faiss-cpu>=1.13.2", #用cpu处理向量
    "numpy>=2.4.4",     #数组包
    "chromadb>=1.5.8", #向量数据库包
    "langgraph>=1.1.8", #企业级大模型脚手架
    "type-extensions>=0.1.2", #typing模块支持类型提示
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.14",
    "agentstate>=1.0.2",
    "pymongo>=4.15.5",  #mongodb数据库
    "langgraph-checkpoint-mongodb>=0.3.1", #让mongodb成为数据中转站
    "langchain-community>=0.4.1",
    "langchain-dashscope>=0.1.6",
    "web3>=7.15.0",
    "eth-account>=0.13.7",
    "pandas>=3.0.2",
    "fastapi>=0.136.1", #pydantic自带的图形化工具
    "uvicorn>=0.44.0",
    "streamlit>=1.57.0",
    "torchvision",
    "pytest>=9.0.3",
    "agno>=2.6.4", #比较轻快的web3智能体工具
    "ollama>=0.6.2",
    "pytest-sugar>=1.1.1", #渲染代码变好看
    "pytest-cov>=7.1.0", #生成测试覆盖率
    "py-solc-x>=2.0.5", #实现合约集成ci
    "eth-tester[py-evm]>=0.13.0b1",
    "playwright>=1.59.0", #用于前端自动化
    "openai>=2.33.0",
    "jupyter>=1.1.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
